GetMoves works, next is moving a piece.
